# pylore

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: numba.ipynb
notebooks/: pytorch_example.ipynb
pylore/: __init__.py  blackbox.py  distances.py  evaluation.py  genetics.py  lore.py  neighborhood.py  treeutils.py
requirements/: requirements-dev.txt  requirements.txt
scripts/: generate_coverage_report.sh
tests/: test_crossover.py  test_distances.py  test_lore.py  test_neighborhood.py  test_treeutils.py
