[tool.black]
line-length = 79

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylore"
version = "0.0.3"
authors = [
  { name="Gerardo Zinno", email="zinno.gerardo.95@gmail.com" },
]
description = "Local Rule-Based Explanations of Black Box Decision Systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/gerzin/pylore"
"Bug Tracker" = "https://github.com/gerzin/pylore/issues"
